[FIX] website, website_livechat: hide cookies bar on policy page
With the popup-styled cookies bar, the cookies policy page is
unreadable. It is also the case with all cookies bar with a backdrop, or
if they are too tall.
The "discrete" and "classic" bars can also potentially hide the last
paragraph(s) of the page.
To avoid that, this commit adds a button to toggle the bar on that page.

Note that the cookies policy page could be on any URL, but it has to be
referenced in the `a.o_cookies_bar_text_policy` link within the cookies
bar.

task-3733860

closes odoo/odoo#167803

X-original-commit: c3047e50dd9b262ef01cf8c49977b52cef2cd03b

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1622,6 +1622,12 @@ $ribbon-padding: 100px;
     height: 0px;
 }
 
+.o_cookies_bar_toggle {
+    inset-inline-end: 1rem;
+    inset-block-end: var(--cookies-bar-toggle-inset-block-end, 1rem);
+    z-index: $zindex-modal + 1; // Over the modal backdrop.
+}
+
 // Search results
 .o_search_result_item_detail {
     flex: 1;
